--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
         "@typescript-eslint/parser": "^5.47.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-plugin-import-no-duplicates-prefix-resolved-path": "^2.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-html": "^7.1.0",
-        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-import-no-duplicates-prefix-resolved-path": "^2.0.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.11",
-        "eslint-plugin-react-hooks": "^4.6.0"
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-import": "^2.27.5"
     }
 }
