--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     },
     "peerDependencies": {
         "eslint": "^8.0.0",
-        "prettier": "^2.7.1",
-        "typescript": "^4.8.4"
+        "prettier": "^3.0.3",
+        "typescript": "^5.2.2"
     },
     "eslintConfig": {
         "extends": [
@@ -42,11 +42,11 @@
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-html": "^7.1.0",
+        "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-import-no-duplicates-prefix-resolved-path": "^2.0.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.11",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-import": "^2.27.5"
+        "eslint-plugin-react-hooks": "^4.6.0"
     }
 }
